--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,13 @@ python:
 # command to install dependencies
 install:
   - pip install --upgrade pip
-  - pip install flask spotipy pandas numpy scikit-learn
+  - pip install flask spotipy pandas numpy scikit-learn pytest
 # command to run tests
+
 script:
+  - py.test -v --color=yes --exitfirst --showlocals --durations=5
+
+after_success:
   - python train.py
 
 
