--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 # command to run tests
 
 script:
-  - py.test -v --color=yes --exitfirst --showlocals --durations=5
+  - pytest 
 
 after_success:
   - python train.py
