--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - pip install --upgrade pip
   - pip install flask spotipy pandas numpy pytest
   - pip install -U scikit-learn
+  - pip install --upgrade scikit-learn
   - pip freeze list 
 # command to run tests
 
