--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,19 @@ script:
   - python train.py
 
 
+# pull docker image 
+services:
+  - docker
+
+
+before_install:
+  - docker pull yennanliu/spotify_rec_env:v1
+  - docker ps -a
+  - docker run spotify_rec_env:v1 
+
+
+
+
+
+
 
