--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ after_install:
   script:
   - docker pull yennanliu/spotify_rec_env:v1
   - docker ps -a
+  - docker run yennanliu/spotify_rec_env:v1
+  - docker images 
 
 
 
